[project]
name = "analyze-df-releases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "pandas>=2.2.3",
    "streamlit>=1.41.0",
    "altair>=5.5.0",
    "marimo>=0.14.8",
]

[tool.ruff]
target-version = "py312"
line-length = 120
