[project]
name = "analyze-df-releases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
    "beautifulsoup4>=4.12.3",
    "pandas>=3.0.3",
    "streamlit>=1.58.0",
    "altair>=6.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
